<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tag"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#E0E0E0"
        android:gravity="center_vertical"
        android:paddingLeft="15dp"
        android:text="A"
        android:textColor="#454545" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="24dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView_app"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:contentDescription="@string/appInfo_appIcon_des"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginTop="7dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_appName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="middle"
                android:singleLine="true"
                android:text="@string/appInfo_appName" />

            <TextView
                android:id="@+id/tv_packgeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="middle"
                android:singleLine="true"
                android:text="@string/app_packageName" />
        </LinearLayout>

        <Switch
            android:id="@+id/switch_app"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>